fluxcd/flux.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: from-gateway-to-flux-dashboard
  namespace: flux-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: manager
  to:
    - group: ""
      kind: Service
      name: flux-operator
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-dashboard
  namespace: manager
spec:
  parentRefs:
    - name: default
  hostnames:
    - fluxcd.internal.chlorodose.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-operator
          namespace: flux-system
          kind: Service
          port: 9080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flux-operator-web
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: flux-operator
      app.kubernetes.io/name: flux-operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: manager
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: default
              gateway.envoyproxy.io/owning-gateway-namespace: manager
      toPorts:
        - ports:
            - port: 9080
              protocol: TCP
